Envio de emails atraves de queue

--- a/.env
+++ b/.env
@@ -16,7 +16,7 @@ BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
-QUEUE_DRIVER=sync
+QUEUE_DRIVER=database
 
 REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
@@ -25,8 +25,8 @@ REDIS_PORT=6379
 MAIL_DRIVER=smtp
 MAIL_HOST=smtp.mailtrap.io
 MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
+MAIL_USERNAME=ce6f2487798e84
+MAIL_PASSWORD=072be752a32de9
 MAIL_ENCRYPTION=null
 
 PUSHER_APP_ID=
